--- a/src/less/index.css
+++ b/src/less/index.css
@@ -190,11 +190,11 @@
   z-index: 10000;
 }
 #header1 .erbar ul li {
-  margin-top: 40px;
+  margin-top: 20px;
   margin-right: 20px;
+  width: 250px;
   float: left;
   text-align: center;
-  font-size: 10px;
 }
 #header1 .erbar ul li:nth-of-type(1) {
   margin-left: 120px;
@@ -203,14 +203,26 @@
   display: block;
 }
 #header1 .erbar ul li a .wen {
+  margin-top: 10px;
+  width: 250px;
+  font-size: 10px;
+  height: 30px;
+  line-height: 30px;
   color: #000;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 #header1 .erbar ul li a .jia {
+  width: 250px;
+  height: 30px;
+  line-height: 30px;
   color: red;
 }
 #header1 .erbar ul li a img {
   width: 150px;
-  margin: 0 auto;
+  height: 100px;
+  margin-left: 45px;
 }
 #banner {
   width: 100%;
@@ -233,7 +245,7 @@
   position: absolute;
   right: 10px;
   bottom: 20px;
-  z-index: 100;
+  z-index: 11;
 }
 #banner .yuan ul li {
   float: left;
@@ -252,7 +264,7 @@
   position: absolute;
   top: 220px;
   left: 230px;
-  z-index: 100;
+  z-index: 1;
   cursor: pointer;
 }
 #banner .an-right {
@@ -261,22 +273,83 @@
   position: absolute;
   top: 220px;
   right: 60px;
-  z-index: 100;
+  z-index: 1;
   cursor: pointer;
 }
 #banner .left {
   width: 176px;
   height: 550px;
   background-color: rgba(0, 0, 0, 0.5);
-  position: relative;
+  position: absolute;
   left: 20px;
-  z-index: 100;
+  z-index: 10;
 }
 #banner .left ul {
   padding-top: 40px;
   width: 176px;
 }
-#banner .left ul li {
+#banner .left ul:hover .ernav {
+  display: block;
+}
+#banner .left ul .ernav {
+  display: none;
+  height: 550px;
+  width: 800px;
+  background-color: #fff;
+  position: absolute;
+  left: 176px;
+  top: 0px;
+  z-index: 120;
+}
+#banner .left ul .ernav ul {
+  width: 800px;
+}
+#banner .left ul .ernav ul li {
+  margin-top: 20px;
+  margin-right: 40px;
+  width: 350px;
+  height: 130px;
+  float: left;
+  padding: 0;
+}
+#banner .left ul .ernav ul li a {
+  width: 350px;
+  height: 130px;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+}
+#banner .left ul .ernav ul li a .img1 {
+  float: left;
+}
+#banner .left ul .ernav ul li a .img1 img {
+  display: block;
+  width: 150px;
+}
+#banner .left ul .ernav ul li a .text5 {
+  margin-top: 20px;
+  float: left;
+  width: 200px;
+  height: 100px;
+  overflow: hidden;
+}
+#banner .left ul .ernav ul li a .text5 .span1 {
+  text-align: left;
+  font-size: 14px;
+  color: #000;
+  line-height: 20px;
+  display: block;
+}
+#banner .left ul .ernav ul li a .text5 .span2 {
+  margin: 0 auto;
+  width: 80px;
+  border: 1px solid red;
+  font-size: 16px;
+  color: red;
+  line-height: 20px;
+  display: block;
+}
+#banner .left ul > li {
   box-sizing: border-box;
   width: 100%;
   height: 67px;
@@ -286,23 +359,114 @@
   padding-left: 32px;
   padding-right: 22px;
 }
-#banner .left ul li a {
+#banner .left ul > li > a {
   display: block;
   color: #fff;
   float: left;
   font-size: 14px;
 }
-#banner .left ul li i {
+#banner .left ul > li > i {
   float: right;
   font-size: 20px;
   color: #fff;
 }
-#banner .left ul li:hover {
+#banner .left ul > li:hover {
   background-color: #fff;
 }
-#banner .left ul li:hover a {
+#banner .left ul > li:hover a {
   color: red;
 }
-#banner .left ul li:hover i {
+#banner .left ul > li:hover i {
   color: red;
+}
+#tu {
+  margin-top: 20px;
+  overflow: hidden;
+}
+#tu img {
+  float: left;
+  margin-right: 10px;
+}
+#tu img:nth-of-type(1) {
+  margin-left: 20px;
+}
+#tv {
+  margin-top: 40px;
+  margin-bottom: 45px;
+  margin-left: 20px;
+}
+#air-condition {
+  margin-top: 40px;
+  margin-bottom: 45px;
+  margin-left: 20px;
+}
+#refrigerator {
+  margin-top: 40px;
+  margin-bottom: 45px;
+  margin-left: 20px;
+}
+#washer {
+  margin-top: 40px;
+  margin-bottom: 45px;
+  margin-left: 20px;
+}
+.mian-text {
+  font-size: 20px;
+  font-weight: 600;
+}
+.mian-img {
+  margin-top: 20px;
+  overflow: hidden;
+}
+.mian-img .mian-imgleft {
+  float: left;
+}
+.mian-img .mian-imgright {
+  height: 615px;
+  width: 931px;
+  background-color: #fff;
+  float: left;
+}
+.mian-img .mian-imgright ul {
+  padding-left: 8px;
+  overflow: hidden;
+}
+.mian-img .mian-imgright ul li {
+  margin-bottom: 16px;
+  width: 296px;
+  height: 290px;
+  margin-top: 6px;
+  float: left;
+  position: relative;
+  margin-right: 6px;
+}
+.mian-img .mian-imgright ul li a {
+  display: block;
+}
+.mian-img .mian-imgright ul li a img {
+  width: 200px;
+  margin: 0 auto;
+}
+.mian-img .mian-imgright ul li a span {
+  text-align: center;
+  display: block;
+}
+.mian-img .mian-imgright ul li a .span3 {
+  font-size: 14px;
+  color: #333;
+}
+.mian-img .mian-imgright ul li a .span4 {
+  margin-top: 10px;
+  font-size: 12px;
+  color: #9b9b9b;
+}
+.mian-img .mian-imgright ul li a .span5 {
+  font-size: 14px;
+  color: #ff2524;
+  margin-top: 10px;
+  font-weight: 600;
+}
+.mian-img .mian-imgright ul li:hover {
+  box-shadow: 0px 0px 2px gray;
+  top: -5px;
 }
