--- a/src/less/index.less
+++ b/src/less/index.less
@@ -195,25 +195,37 @@
     overflow: hidden;
     z-index: 10000;
         ul li{
-            margin-top: 40px;
+            margin-top: 20px;
             margin-right: 20px;
+            width: 250px;
             float: left;
             text-align: center;
-            font-size: 10px;
             &:nth-of-type(1){
                 margin-left: 120px;
             }
             a{
                 display: block;
                 .wen{
+                    margin-top: 10px;
+                    width: 250px;
+                    font-size: 10px;
+                    height: 30px;
+                    line-height: 30px;
                     color: #000;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
                 }
                 .jia{
+                    width: 250px;
+                    height:30px;
+                    line-height: 30px;
                     color: red;
                 }
                 img{
                     width: 150px;
-                    margin: 0 auto;
+                    height: 100px;
+                    margin-left: 45px;
                 }
             }
         }
@@ -239,7 +251,7 @@
         position: absolute;
         right: 10px;
         bottom: 20px;
-        z-index: 100;
+        z-index: 11;
         ul li{
         float: left;
         margin-right: 10px;
@@ -258,7 +270,7 @@
         position: absolute;
         top: 220px;
         left: 230px;
-        z-index: 100;
+        z-index: 1;
         cursor: pointer;
     }
     .an-right{
@@ -267,20 +279,85 @@
         position: absolute;
         top: 220px;
         right: 60px;
-        z-index: 100;
+        z-index: 1;
         cursor: pointer;
     }
     .left{
         width: 176px;
         height: 550px;
         background-color: rgba(0,0,0,.5);
-        position: relative;
+        position: absolute;
         left: 20px;
-        z-index: 100;
+        z-index: 10;
         ul{
             padding-top: 40px;
             width: 176px;
-            li{
+            &:hover .ernav{
+                display: block;
+            }
+            .ernav{
+                display: none;
+                height: 550px;
+                width: 800px;
+                background-color:#fff;
+                position: absolute;
+                left: 176px;
+                top:0px;
+                z-index: 120;
+                ul{
+                    width: 800px;
+                    li{
+                        margin-top: 20px;
+                        margin-right: 40px;
+                        width: 350px;
+                        height: 130px;
+                        float: left;
+                        padding: 0;
+                        a{
+                            width: 350px;
+                            height: 130px;
+                            display: block;
+                            overflow: hidden;
+                            margin: 0;
+                            .img1{
+                                float: left;
+                                img{
+                                    display: block;
+                                    width: 150px;
+                                }
+                            }
+                           
+                            .text5{
+                                margin-top: 20px;
+                                float: left;
+                                width: 200px;
+                                height:100px;
+                                overflow: hidden;
+                                .span1{
+                                    text-align: left;
+                                    font-size: 14px;
+                                    color: #000;
+                                    line-height: 20px;
+                                    display: block;
+                                }
+                                .span2{
+                                    margin: 0 auto;
+                                    width: 80px;
+                                    border: 1px solid red;
+                                    font-size: 16px;
+                                    color:red;
+                                    line-height: 20px;
+                                    display: block;
+                                }
+                            }
+                            
+                        }
+                        
+                    }
+                }
+              
+            }
+            &>li{
                 box-sizing: border-box;
                 width: 100%;
                 height: 67px;
@@ -289,13 +366,13 @@
                 cursor: pointer;
                 padding-left: 32px;
                 padding-right: 22px;
-                a{
+                &>a{
                     display: block;
                     color: #fff;
                     float: left;
                     font-size: 14px;
                 }
-                i{
+                &>i{
                     float: right;
                     font-size: 20px;
                     color: #fff;
@@ -313,4 +390,95 @@
         }
     }
 }
-
+#tu{
+    margin-top: 20px;
+    overflow: hidden;
+    img{
+        float: left;
+        margin-right: 10px;
+        &:nth-of-type(1){
+            margin-left: 20px;
+        }
+    }
+    
+}
+#tv{
+    margin-top: 40px;
+    margin-bottom: 45px;
+    margin-left: 20px;
+}
+#air-condition{
+    margin-top: 40px;
+    margin-bottom: 45px;
+    margin-left: 20px;
+}
+#refrigerator{
+    margin-top: 40px;
+    margin-bottom: 45px;
+    margin-left: 20px;
+}
+#washer{
+    margin-top: 40px;
+    margin-bottom: 45px;
+    margin-left: 20px;
+}
+.mian-text{
+    font-size: 20px;
+    font-weight: 600;
+}
+.mian-img{
+    margin-top: 20px;
+    overflow: hidden;
+    .mian-imgleft{
+        float: left;
+    }
+    .mian-imgright{
+        height: 615px;
+        width: 931px;
+        background-color: #fff;
+        float: left;
+        ul{
+            padding-left:8px;
+            overflow: hidden;
+            li{
+                margin-bottom: 16px;
+                width: 296px;
+                height: 290px;
+                margin-top: 6px;
+                float: left;
+                position: relative;
+                margin-right: 6px;
+                a{
+                    display: block;
+                    img{
+                        width: 200px;
+                        margin: 0 auto;
+                    }
+                    span{
+                        text-align: center;
+                        display: block;
+                    }
+                    .span3{
+                        font-size: 14px;
+                        color: #333;
+                    }
+                    .span4{
+                        margin-top: 10px;
+                        font-size: 12px;
+                        color: #9b9b9b;
+                    }
+                    .span5{
+                        font-size: 14px;
+                        color: #ff2524;
+                        margin-top: 10px;
+                        font-weight: 600;
+                    }
+                }
+                &:hover{
+                     box-shadow: 0px 0px 2px gray;
+                     top: -5px;
+                }
+            }
+        }
+    }
+}
