--- a/src/less/pre.less
+++ b/src/less/pre.less
@@ -91,6 +91,7 @@
             background-color: red;
             color: #fff;
             font-weight: bolder;
+            cursor: pointer;
         }
         ul{
             margin-top: 20px;
