--- a/src/less/index.less
+++ b/src/less/index.less
@@ -250,3 +250,49 @@
         }
     }
 }
+#bootm{
+    position: relative;
+    height: 200px;
+    background-color: #f0f0f0;
+    .wei{
+        position: absolute;
+        right: 120px;
+        top: 20px;
+    }
+    ul{
+        margin-left: 20px;
+        overflow: hidden;
+        li{
+            float: left;
+            margin-right: 20px;
+            a{
+                color: #666;
+                font-size: 14px;
+            }
+           
+        }
+    }
+    p{
+        margin-top: 15px;
+        margin-left: 20px;
+        display: block;
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+    h6{
+        margin-left: 20px;
+        margin-bottom: 20px;
+    }
+    .img{
+        overflow: hidden;
+        width: 250px;
+        margin: 0 auto;
+        img{
+            margin-right: 10px;
+            float: left;
+        }
+        .img1{
+            margin-top: 1px;
+        }
+    }
+}
